--- a/app/src/main/res/layout/activity_evento.xml
+++ b/app/src/main/res/layout/activity_evento.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.dglozano.meetapp.actividades.EventoActivity">
+    tools:context="com.retigalo.dglozano.meetapp.actividades.EventoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
