--- a/app/src/main/res/menu/menu_form.xml
+++ b/app/src/main/res/menu/menu_form.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.dglozano.meetapp.actividades.EventoActivity">
+    tools:context="com.retigalo.dglozano.meetapp.actividades.EventoActivity">
 
     <item
         android:id="@+id/menu_item_Ok"
